--- a/pgso_Billing/Forms/Report_Extension_Slip.rdlc
+++ b/pgso_Billing/Forms/Report_Extension_Slip.rdlc
@@ -1597,10 +1597,10 @@ Switch(
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="PGSO("&amp; Fields!fld_Username.Value &amp;")"&amp; Format(Now(), "M/d/yy h:mm tt")</Value>
+                <Value>="Generated from RBIS by: "&amp; Fields!fld_Username.Value &amp;" "&amp; Format(Now(), "M/d/yy h:mm tt")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
-                  <FontSize>9pt</FontSize>
+                  <FontSize>8pt</FontSize>
                   <Format>MMM d, yyyy</Format>
                 </Style>
               </TextRun>
@@ -1631,7 +1631,7 @@ Switch(
                 <Style>
                   <FontStyle>Italic</FontStyle>
                   <FontFamily>Calibri</FontFamily>
-                  <FontSize>9pt</FontSize>
+                  <FontSize>8pt</FontSize>
                 </Style>
               </TextRun>
             </TextRuns>
@@ -2701,10 +2701,10 @@ This Province</Value>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="PGSO(" &amp; First(Fields!fld_Username.Value, "BillingDataset") &amp; ") " &amp; Format(Now(), "M/d/yy h:mm tt")</Value>
+                <Value>="Generated from RBIS by: "&amp; Fields!fld_Username.Value &amp;" "&amp; Format(Now(), "M/d/yy h:mm tt")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
-                  <FontSize>9pt</FontSize>
+                  <FontSize>8pt</FontSize>
                   <Format>MMM d, yyyy</Format>
                 </Style>
               </TextRun>
@@ -2735,7 +2735,7 @@ This Province</Value>
                 <Style>
                   <FontStyle>Italic</FontStyle>
                   <FontFamily>Calibri</FontFamily>
-                  <FontSize>9pt</FontSize>
+                  <FontSize>8pt</FontSize>
                 </Style>
               </TextRun>
             </TextRuns>
